syntax = "proto2";

import "src/protobuf/route/BrokerData.proto";
import "src/protobuf/topic/TopicConfig.proto";

package com.yimq.common.protobuf.route;

option java_package = "com.yimq.common.protocol.route";
option java_outer_classname = "TopicRouteDataProto";

message TopicRouteData {
    required string topic = 1;
    repeated BrokerData brokerDatas = 2;
    optional com.yimq.common.protobuf.topic.TopicConfig topicConfig = 3;
}

message TopicRouteDataMap {
    map<string, TopicRouteData> topicRouteDataMap = 1;
}